c4prj2_input/grade.txt
Grading at Sun Jan 12 03:03:52 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:68:29: error: the comparison will always evaluate as ‘false’ for the address of ‘hand_from_string’ will never be NULL [-Werror=address]
         if(hand_from_string == NULL) continue;
                             ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
